--- a/AnimationApp/AnimationApp.csproj
+++ b/AnimationApp/AnimationApp.csproj
@@ -52,4 +52,11 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Model\" />
+	  <Folder Include="Business\" />
+	  <Folder Include="Service\" />
+	  <Folder Include="View\" />
+	</ItemGroup>
+
 </Project>
